# open-rum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  U1_Test.txt  U2_Test.txt  U3_Test.txt  U4_Test.txt  _start.bat  _start_client.bat  _start_debug.bat  _start_server.bat  library.db  rum_client.ini  rum_editor.ini  rum_portal.ini  rum_server.ini
doc/: AdminGuide.txt  LICENSE.txt  README.txt
sdk/: sdk.txt
sdk/fmod/: revision.txt
sdk/imgui/: imconfig.h
sdk/iniparser/: iniparser.c  iniparser.h
sdk/md5/: md5.cpp  md5.h
sdk/msvc/: rum.ruleset
setup/: client_setup.iss  portal_setup.iss  server_setup.iss
src/: paths.h  resource.h
src/client/: CMakeLists.txt  c_account.cpp  c_account.h  c_events.cpp  c_events.h  c_font.cpp  c_font.h  c_font_freetype.cpp  c_graphics.cpp  c_graphics.h  c_graphics_glfw.cpp  c_graphics_glfw.h  c_input.cpp  c_input.h  c_input_glfw.cpp  c_input_glfw.h  c_inventory.cpp  c_inventory.h  c_map.cpp  c_map.h  c_map_fov.cpp  c_map_fov.h  c_patcher.cpp  c_patcher.h  c_pawn.cpp  c_pawn.h  c_pch.h  c_player.cpp  c_player.h  c_resource.h  c_rum.cpp  c_rum.h  c_rum.rc  c_sound_fmod.cpp  c_sound_fmod.h
src/client/controls/: c_control.cpp  c_control.h  c_control.inl  c_label.cpp  c_label.h  c_listview.cpp  c_listview.h  c_region.cpp  c_region.h  c_scrollbuffer.cpp  c_scrollbuffer.h  c_slider.cpp  c_slider.h  c_textbox.cpp  c_textbox.h  c_textview.cpp  c_textview.h
src/debugger/: CMakeLists.txt  d_interface.cpp
src/editor/: CMakeLists.txt  e_control.cpp  e_control.h  e_graphics.cpp  e_graphics.h  e_graphics_opengl.cpp  e_graphics_opengl.h  e_inventory.cpp  e_inventory.h  e_map.cpp  e_map.h  e_pawn.cpp  e_pawn.h  e_pch.h  e_resource.h  e_rum.cpp  e_rum.h  e_rum.rc  e_sound.cpp  e_sound.h  e_utility.cpp  e_utility.h  rum_editor.pro  rum_editor.qrc
src/editor/ui/: assetmanager.cpp  assetmanager.h  assetmanager.inl  assetmanager.ui  assetpicker.cpp  assetpicker.h  assetpicker.ui  combopicker.cpp  combopicker.h  combopicker.ui  datatablemanager.cpp  datatablemanager.h  datatablemanager.ui  filefilter.cpp  filefilter.h  languagetranslator.cpp  languagetranslator.h  languagetranslator.ui  mainwindow.cpp  mainwindow.h  mainwindow.inl  mainwindow.ui  mapeditor.cpp  mapeditor.h  mapeditor.inl  mapeditor.ui  mapgoto.cpp  mapgoto.h  mapgoto.ui  newmap.cpp  newmap.h  newmap.ui  newproject.cpp  newproject.h  newproject.ui  newscript.cpp  newscript.h  newscript.ui  output.cpp  output.h  (+41 more)
src/editor/ui/qtFindReplace/: findreplace_global.h
src/editor/ui/resources/project/: game.rum  patch.db  player.db  strings_c.db  strings_s.db  strings_u.db  types.db
src/editor/ui/resources/project/audio/: audio.pkg
src/editor/ui/resources/project/graphics/: tileset.pkg
src/editor/ui/resources/project/maps/: map.pkg  world.map
src/editor/ui/resources/project/scripts/: shared.nut
src/editor/ui/resources/project/scripts/client/: creature.nut  graphic.nut  init.nut  inventory.nut  map.nut  npc.nut  player.nut  portal.nut  property.nut  sound.nut  tile.nut  utility.nut  widget.nut
src/editor/ui/resources/project/scripts/server/: broadcast.nut  creature.nut  init.nut  inventory.nut  map.nut  npc.nut  player.nut  portal.nut  property.nut  server.nut  tile.nut  widget.nut
src/lib/: CMakeLists.txt  u_account.cpp  u_account.h  u_animation.cpp  u_animation.h  u_assert.cpp  u_assert.h  u_asset.cpp  u_asset.h  u_asset.inl  u_broadcast.cpp  u_broadcast.h  u_broadcast_asset.cpp  u_broadcast_asset.h  u_creature_asset.cpp  u_creature_asset.h  u_custom.cpp  u_custom.h  u_custom_asset.cpp  u_custom_asset.h  u_datatable.cpp  u_datatable.h  u_db.cpp  u_db.h  u_enum.cpp  u_enum.h  u_events.cpp  u_events.h  u_graphic.cpp  u_graphic.h  u_graphic_asset.cpp  u_graphic_asset.h  u_graphic_attributes.cpp  u_graphic_attributes.h  u_inventory.cpp  u_inventory.h  u_inventory_asset.cpp  u_inventory_asset.h  u_inventory_iterator.cpp  u_inventory_iterator.h  (+53 more)
src/lib/network/: u_connection.cpp  u_connection.h  u_network.cpp  u_network.h  u_packet.cpp  u_packet.h  u_patcher.cpp  u_patcher.h
src/platform/: config.h  platform.cpp  platform.h
src/portal/: CMakeLists.txt  p_resource.h  p_rum.cpp  p_rum.h  p_rum.rc  rum_portal.pro
src/portal/ui/: game.h  gamedownload.cpp  gamedownload.h  gamedownload.ui  gameentry.cpp  gameentry.h  gameentry.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/server/: CMakeLists.txt  s_account.cpp  s_account.h  s_astar.cpp  s_astar.h  s_inventory.cpp  s_inventory.h  s_map.cpp  s_map.h  s_pawn.cpp  s_pawn.h  s_pch.h  s_player.cpp  s_player.h  s_resource.h  s_rum.cpp  s_rum.h  s_rum.rc
src/tools/: rum_archive.cpp
ultima/: LICENSE.txt  game.ini  game.rum  game_release.ini  player.db  readme.txt  todo.txt
ultima/audio/: sounds_c64.pkg  sounds_pc.pkg
ultima/csv/: broadcast.csv  creature.csv  creature_property.csv  custom.csv  custom_property.csv  datatable.csv  datatable_merchant_armour.csv  datatable_merchant_guild_u3.csv  datatable_merchant_guild_u4.csv  datatable_merchant_healer.csv  datatable_merchant_inn.csv  datatable_merchant_magic.csv  datatable_merchant_reagents.csv  datatable_merchant_tavern.csv  datatable_merchant_transports.csv  datatable_merchant_weapons.csv  graphic.csv  inventory.csv  inventory_property.csv  language.csv  map.csv  map_property.csv  package.csv  package_maps_u1.csv  package_maps_u2.csv  package_maps_u3.csv  package_maps_u4.csv  package_sounds_c64.csv  package_sounds_pc.csv  package_tiles_apple2.csv  package_tiles_ascii.csv  package_tiles_c64.csv  package_tiles_c64_rem.csv  package_tiles_ega.csv  package_tiles_fm_towns.csv  package_tiles_nes.csv  package_tiles_sms.csv  package_tiles_steele1.csv  package_tiles_steele2.csv  package_tiles_steele3.csv  (+28 more)
ultima/graphics/: file.pcx  folder.pcx  mouse_cursor.pcx  progress.pcx  progress_box.pcx  target.pcx  tiles_apple2.pkg  tiles_ascii.pkg  tiles_c64.pkg  tiles_c64_rem.pkg  tiles_ega.pkg  tiles_fm_towns.pkg  tiles_nes.pkg  tiles_sms.pkg  tiles_steele1.pkg  tiles_steele2.pkg  tiles_steele3.pkg  tiles_xu4.pkg  u2_time_periods.pcx  volume.pcx
ultima/maps/: maps_u1.pkg  maps_u2.pkg  (+2 more)
(+4717 files in other folders)
